fix: button text color on iOS

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -102,6 +102,10 @@ body {
     border: none;
     text-decoration: underline;
   }
+
+  button {
+    color: black;
+  }
 }
 
 body {
